@@ -402,7 +402,7 @@ function getPerf(cdnbox) {
             cdnboxState.gettime6 = msg.perf;
 	  }
 	  // detection de changement d'IP.
-	  if (cdnboxState !== cdnboxStates.local) {
+	  if (cdnboxState !== cdnboxStates.local && !cdnboxState.config.cname) {
 	    if (msg.ipv === 4 && msg.ip !== cdnboxState.ipv4) { 
 	      if (msg.ip === undefined || msg.ip == "undefined") {
 		delete cdnboxState.ipv4;
@@ -465,18 +465,14 @@ function getPerf(cdnbox) {
       cdnboxState.score = 100000;
       if (cdnboxState.status === 'on') { cdnboxState.status = 'fail'; }
       if (cdnboxState.perflastupdate !== 0) { logerror('"error": "getPerf: IPv4 timeout on ' + cdnbox.name + '"'); }
-    }
-    if (Date.now() - cdnboxState.perflastupdate6 > 20000) {
-      if (cdnboxState.status6 === 'on') { cdnboxState.status6 = 'fail'; }
-      if (cdnboxState.perflastupdate !== 0) { logerror('"error": "getPerf: IPv6 timeout on ' + cdnbox.name + '"'); }
-    }
-    if (Date.now() - cdnboxState.perflastupdate > 20000) {
       perfoptions.family = 4;
       if (cdnboxState.netint !== undefined) { perfoptions.hostname = '127.0.0.1'; }
       probeChild.send({ 'name': cdnbox.name, 'interval': 10000, 'options': perfoptions },
                       function (e) { if (e !== null) probeChild = undefined; });
     }
     if (cdnboxState.ipv6 !== undefined && Date.now() - cdnboxState.perflastupdate6 > 20000) {
+      if (cdnboxState.status6 === 'on') { cdnboxState.status6 = 'fail'; }
+      if (cdnboxState.perflastupdate6 !== 0) { logerror('"error": "getPerf: IPv6 timeout on ' + cdnbox.name + '"'); }
       perfoptions.family = 6;
       if (cdnboxState.netint !== undefined) { perfoptions.hostname = '::1'; }
       probeChild.send({ 'name': cdnbox.name, 'interval': 10000, 'options': perfoptions },
